<resources>
    <string name="app_name">Artemis Messenger</string>
    <string name="sourceHeader">Source</string>
    <string name="destHeader">Destination</string>
    <string name="rewardHeader">Reward</string>
    <string name="addressRow">addressRow</string>
    <string name="appLayout">appLayout</string>
    <string name="showAllButton">showAllPrefButton</string>
    <string name="showAllRoutingButton">showAllRoutingPrefButton</string>
    <string name="showNoneRoutingButton">showNoneRoutingPrefButton</string>
    <string name="addressLabel">Address</string>
    <string name="missionsHint">Next stop highlighted in orange</string>
    <string name="alliesHint">Touch row to request status update</string>
    <string name="stationsHint">Touch row to request docking standby or build next ordnance type</string>
    <string name="routingHint">Change routing options in Settings</string>
    <string name="connectHint">Connect to a server</string>
    <string name="showMissions">Missions</string>
    <string name="showAllies">Allies</string>
    <string name="shipHeader">Ship</string>
    <string name="shieldsHeader">Shields</string>
    <string name="statusHeader">Status</string>
    <string name="showStations">Stations</string>
    <string name="stationHeader">Station</string>
    <string name="ordnanceHeader">Ordnance</string>
    <string name="vesselDataPrefCategory">Vessel Data</string>
    <string name="networkPrefCategory">Network</string>
    <string name="settingsPrefCategory">Default Settings</string>
    <string name="restoreDefaultButton">restoreDefaultPrefButton</string>
    <string name="missionDispPrefCategory">Mission Display</string>
    <string name="batteryChargePref">Battery Charge</string>
    <string name="extraCoolantPref">Extra Coolant</string>
    <string name="nukePref">Nuclear Missiles</string>
    <string name="prodSpeedPref">Production Speed</string>
    <string name="shieldBoostPref">Shield Boost</string>
    <string-array name="vesselDataPrefList">
        <item>Default</item>
        <item>Internal storage</item>
        <item>External storage</item>
    </string-array>
    <string-array name="vesselDataValueList">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="vesselDataSummary">Select the location of the /dat folder where vesselData.xml is located. Warning: Changing the location while connected to a server will reset the connection.</string>
    <string name="batteryChargeKey">batteryChargeCheckBox</string>
    <string name="extraCoolantKey">extraCoolantCheckBox</string>
    <string name="nuclearKey">nukeMissilesCheckBox</string>
    <string name="speedKey">prodSpeedCheckBox</string>
    <string name="shieldKey">shieldBoostCheckBox</string>
    <string name="vesselDataKey">vesselDataList</string>
    <string name="newMissionPrefKey">newMissionPrefKey</string>
    <string name="foundSrcPrefKey">foundSrcPrefKey</string>
    <string name="foundDestPrefKey">foundDestPrefKey</string>
    <string name="underAttackPrefKey">underAttackPrefKey</string>
    <string name="baseDestroyedPrefKey">baseDestroyedPrefKey</string>
    <string name="connect">Connect</string>
    <string name="availableServers">Available servers</string>
    <string name="recentHosts">Recent servers</string>
    <string name="helpTopicsKey">helpTopicsMenuItem</string>
    <string name="serverPortKey">serverPortText</string>
    <string name="serverPortTitle">Server port</string>
    <string name="serverTimeoutKey">packetTimeoutText</string>
    <string name="serverTimeoutTitle">Server timeout</string>
    <string name="udpTimeoutKey">udpTimeoutText</string>
    <string name="udpTimeoutTitle">Broadcast timeout</string>
    <string name="allowUDPKey">allowUDPCheckBox</string>
    <string name="allowUDPTitle">Allow server detection</string>
    <string name="allowUDPSummary">If checked, server connections may be detected via UDP broadcast.</string>
    <string name="connectStartupKey">connectStartupCheckBox</string>
    <string name="connectStartupTitle">Show Connect menu on startup</string>
    <string name="showHintTextKey">hintTextCheckBox</string>
    <string name="showHintTextTitle">Show hints at bottom of screen</string>
    <string name="basicsParagraph3">Before you can use Artemis Messenger, you must have an Artemis server running. Open Artemis on your computer and click "Start Server". After that, enter the server\'s address into the Address bar at the top of your screen, then touch the Connect button on the right to connect to the server.</string>
    <string name="basicsParagraph2">Artemis Messenger is a Comms client app designed to be used with Artemis Spaceship Bridge Simulator, developed by Thom Robertson. It will be your assistant in managing side missions, ally ships, stations and more.</string>
    <string name="basicsParagraph1">Welcome to Artemis Messenger! If this is your first time using this app, this tutorial will teach you all you need to know about how to use it.</string>
    <string name="basicsConnectHeader">Connecting to a server</string>
    <string name="basicsLeavingHeader">Leaving Artemis Messenger</string>
    <string name="basicsParagraph4">You will know that the connection was successful if the area around the Address bar turns green. You will probably also see text appear in the box below it; that is the ship selector box. Touch it to switch to any of the eight ships; you will then assume a Comms role for that ship.</string>
    <string name="basicsParagraph6">If you touch the Home button on your phone to return to your Home menu, Artemis Messenger will keep running in the background. It will continue to receive information about side missions, allies and stations via a Comms service. This information will be shown as notifications on your phone. If you click on one of those notifications, you will return to Artemis Messenger.</string>
    <string name="basicsParagraph5">When you want to leave Artemis Messenger, just hit the Back button on your phone. If your phone doesn\'t have a Back button, you can also press the Close button in the top-right corner of the screen. If the app is connected to a server, a dialog will appear asking if you want to close the connection; otherwise, no dialog will appear.</string>
    <string name="backButton">Back</string>
    <string name="alliesParagraph2">There are three columns in the Allies table. The Ship column shows the ship\'s name, the Shields column shows its front and rear shield strengths, and the Status column shows the status of the ship.</string>
    <string name="alliesParagraph1">While running the Artemis Messenger app, touch the Allies button to open the Allies view. This view shows the statuses of all of the ally ships in the currently running simulation.</string>
    <string name="alliesParagraph16">Fighter trap: The ship is a disguised fleet of fighters. Do not approach the ship under any circumstances. Destroy it from a distance.</string>
    <string name="alliesParagraph17">Mine trap: The ship is programmed to self-destruct when your ship approaches. Do not approach the ship under any circumstances. Destroy it from a distance.</string>
    <string name="alliesParagraph18">Destroyed: The ship has been destroyed. You can choose not to display these ships in Settings.</string>
    <string name="alliesParagraph14">Hostages: The ship has been taken over and the crew is being held hostage. To save them, fly near the ship with at least 900 units of energy, which will be given to the captors, and the ship will reward you by enhancing your shield generators. If you have less than 900 units of energy, the ship will self-destruct.</string>
    <string name="alliesParagraph15">Commandeered: The ship has been taken over by a hostile force. To save the ship, you must approach the ship while it is in a nebula. If you approach while the ship is not in a nebula, it will self-destruct.</string>
    <string name="alliesParagraph3">As with the Missions view, Artemis Messenger obtains information about the status of the ship via incoming Comms messages. Whenever it connects to a running simulation, it sends a hail message to all ally ships, and then they respond with their status. The status information includes whether or not they have energy to spare, which can be acquired by simply flying near them. In Deep Strike, the ship will also tell you if it has extra torpedoes on board. You can touch a row in the table to manually send a hail message to that ship.</string>
    <string name="alliesParagraph6">Delivering reward: The ship is headed to a station to drop off some extra torpedoes. Interact at your own discretion.</string>
    <string name="alliesParagraph7">Flying blind: The ship is stuck. You can fix this by sending it to a station.</string>
    <string name="alliesParagraph10">Malfunction: The ship\'s computers are down, leaving the ship stranded. You can fix this by firing a Type 9 EMP torpedo at the ship, which will reboot its computer system.</string>
    <string name="alliesParagraph11">Ambassador: The ship is dead in space and is carrying an ambassador that needs rescue. The rescue must be carried out by flying a shuttle next to the ship.</string>
    <string name="alliesParagraph12">Has Pirate contraband: The ship is carrying a suspicious cargo and will not listen to orders until it is delivered. Terran and Ximni ships should instruct the nearest allied warship to intercept the payload. Pirate ships should instruct allied warships to steer clear of the ship carrying the contraband.</string>
    <string name="alliesParagraph13">Has secure data: The ship is carrying secure, top-secret data for the government and is attempting to leave the sector. Terran and Ximni ships should make sure of the ship\'s safety as it attempts to do its job. Pirate ships should stay away from the ship; if a Pirate ship comes within 10 km, the ship will self-destruct.</string>
    <string name="alliesParagraph4">In addition to energy and torpedoes, the Status column also displays the number of current side missions that involve the ship. Finally, the ally ships will report their current status, and Artemis Messenger will display this status and any recommendations for interaction. The statuses the ships may report are as follows.</string>
    <string name="alliesParagraph5">Normal: The ship is just fine. Interact at your own discretion.</string>
    <string name="alliesParagraph8">Need 100 energy: The ship is out of energy and cannot move. You can fix this by flying near the ship with at least 100 units of energy, which will be transferred to the ship.</string>
    <string name="alliesParagraph9">Need DamCon teams: The ship is damaged and needs repair. You can fix this by flying near the ship.</string>
    <string name="alliesHeader">What does it show?</string>
    <string name="needEnergyKey">needEnergyCheckBox</string>
    <string name="malfunctionKey">malfunctionCheckBox</string>
    <string name="ambassadorKey">ambassadorCheckBox</string>
    <string name="needDamConKey">needDamConCheckBox</string>
    <string name="energyKey">energyCheckBox</string>
    <string name="hostageKey">hostageCheckBox</string>
    <string name="threeDigitsPrefKey">threeDigitsCheckBox</string>
    <string name="commandeeredKey">commandeeredCheckBox</string>
    <string name="hasTorpsKey">hasTorpsCheckBox</string>
    <string name="includeAlliesKey">includeAllyShips</string>
    <string name="allySortPrefCategory">Ally Sorting</string>
    <string name="routingPrefCategory">Routing</string>
    <string name="energyFirstKey">energyFirstCheckBox</string>
    <string name="showDestroyedKey">showDestroyedCheckBox</string>
    <string name="allySortKey">allySortList</string>
    <string name="allySortSummary">Choose the method of sorting entries in the Allies table.</string>
    <string name="productionPrefKey">productionPrefKey</string>
</resources>