<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:key="pref_key_vessel_data" android:title="@string/vesselDataPrefCategory">
        <ListPreference
            android:entryValues="@array/vesselDataValueList"
            android:entries="@array/vesselDataPrefList"
            android:dialogTitle="Vessel data location"
            android:key="@string/vesselDataKey"
            android:selectable="true"
            android:negativeButtonText="Cancel"
            android:defaultValue="0"
            android:enabled="true"
            android:positiveButtonText="OK"
            android:title="Choose location"
            android:summary="@string/vesselDataSummary"/>
        
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_network"
        android:title="@string/networkPrefCategory">
        
        <EditTextPreference
            android:title="@string/serverPortTitle"
            android:key="@string/serverPortKey"
            android:dialogTitle="@string/serverPortTitle"
            android:defaultValue="2010"
            android:inputType="number"
            android:selectable="true"
            android:enabled="true"/>
        
        <EditTextPreference
            android:selectable="true"
            android:enabled="true"
            android:title="@string/serverTimeoutTitle"
            android:dialogTitle="@string/serverTimeoutTitle"
            android:key="@string/serverTimeoutKey"
            android:defaultValue="2"
            android:inputType="number"/>
        
        <CheckBoxPreference
            android:enabled="true"
            android:defaultValue="true"
            android:selectable="true"
            android:title="@string/allowUDPTitle"
            android:summary="@string/allowUDPSummary"
            android:key="@string/allowUDPKey" />
        
        <CheckBoxPreference
            android:title="@string/connectStartupTitle"
            android:key="@string/connectStartupKey"
            android:selectable="true"
            android:enabled="true"
            android:defaultValue="true"
            android:dependency="@string/allowUDPKey" />
    
    <EditTextPreference
        android:title="@string/udpTimeoutTitle"
        android:dialogTitle="@string/udpTimeoutTitle"
        android:key="@string/udpTimeoutKey"
        android:inputType="number"
        android:defaultValue="10"
        android:dependency="@string/allowUDPKey"
        android:selectable="true"
        android:enabled="true"/>
    
</PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_mission_display_options"
        android:title="@string/missionDispPrefCategory"
        android:summary="Side missions that do not include at least one of the selected rewards will not be shown.">
        
        <CheckBoxPreference
            android:key="@string/batteryChargeKey"
            android:title="@string/batteryChargePref"
            android:enabled="true"
            android:selectable="true" android:defaultValue="true"/>
        
        <CheckBoxPreference 
            android:key="@string/extraCoolantKey"
            android:title="@string/extraCoolantPref"
            android:enabled="true"
            android:selectable="true" android:defaultValue="true"/>
        
        <CheckBoxPreference
            android:enabled="true"
            android:key="@string/nuclearKey"
            android:selectable="true"
            android:title="@string/nukePref" android:defaultValue="true"/>
        
        <CheckBoxPreference
            android:enabled="true"
            android:key="@string/speedKey"
            android:selectable="true"
            android:title="@string/prodSpeedPref" android:defaultValue="true"/>
        
        <CheckBoxPreference
            android:enabled="true"
            android:key="@string/shieldKey"
            android:selectable="true"
            android:title="@string/shieldBoostPref" android:defaultValue="true"/>
        
        <Preference
            android:summary="All side missions will be shown."
            android:selectable="true"
            android:key="@string/showAllButton"
            android:title="Show All"
            android:enabled="true"/>
        
    </PreferenceCategory><PreferenceCategory android:title="@string/allySortPrefCategory" android:key="pref_key_allies_sort">
        <ListPreference android:entries="@array/allySortMethodPrefList" android:entryValues="@array/allySortMethodValueList" android:positiveButtonText="OK" android:dialogTitle="Ally sorting method" android:negativeButtonText="Cancel" android:enabled="true" android:selectable="true" android:defaultValue="0" android:key="@string/allySortKey" android:summary="@string/allySortSummary" android:title="Choose method"/><CheckBoxPreference android:enabled="true" android:title="Ships w/energy first" android:defaultValue="true" android:selectable="true" android:key="@string/energyFirstKey"/>
        <CheckBoxPreference android:key="@string/showDestroyedKey" android:title="Show destroyed allies" android:enabled="true" android:defaultValue="true" android:selectable="true"/>
        
    </PreferenceCategory>
    <PreferenceCategory android:key="pref_key_routing" android:summary="Include ally ships that:" android:title="@string/routingPrefCategory"><Preference android:key="@string/includeAlliesKey" android:title="Include ally ships that:" android:enabled="false" android:selectable="false"/><CheckBoxPreference android:title="Have energy" android:key="@string/energyKey" android:selectable="true" android:enabled="true" android:defaultValue="false" /><CheckBoxPreference android:key="@string/hasTorpsKey" android:title="Have torpedoes (Deep Strike)" android:defaultValue="false" android:enabled="true" android:selectable="true"/><CheckBoxPreference android:selectable="true" android:defaultValue="false" android:enabled="true" android:key="@string/needEnergyKey" android:title="Need energy" /><CheckBoxPreference android:selectable="true" android:defaultValue="false" android:title="Need DamCon teams" android:enabled="true" android:key="@string/needDamConKey" /><CheckBoxPreference android:selectable="true" android:defaultValue="false" android:title="Are malfunctioning" android:enabled="true" android:key="@string/malfunctionKey" /><CheckBoxPreference android:key="@string/ambassadorKey" android:defaultValue="false" android:enabled="true" android:selectable="true" android:title="Are carrying ambassadors"/><CheckBoxPreference android:selectable="true" android:defaultValue="false" android:title="Are hostages" android:enabled="true" android:key="@string/hostageKey" />
    <CheckBoxPreference android:title="Are commandeered" android:key="@string/commandeeredKey" android:defaultValue="false" android:enabled="true" android:selectable="true"/><Preference android:title="Show All" android:selectable="true" android:enabled="true" android:key="@string/showAllRoutingButton" android:summary="All ally ships that meet any of these criteria will be shown."/>
    
    <Preference android:title="Show None" android:key="@string/showNoneRoutingButton" android:summary="Only allies with side missions will be shown." android:selectable="true" android:enabled="true"/>
    <CheckBoxPreference android:key="@string/threeDigitsPrefKey" android:title="Force three-digit directions" android:defaultValue="false" android:enabled="true" android:selectable="true" android:summary="DIR numbers will be padded with zeroes."/>
    
    
    
</PreferenceCategory><PreferenceCategory
        android:key="pref_key_notifications"
        android:title="Notifications">
        
        <RingtonePreference
            android:title="New side mission"
            android:showDefault="true"
            android:ringtoneType="notification"
            android:key="@string/newMissionPrefKey"
            android:showSilent="true"
            android:selectable="true"
            android:enabled="true"/>
        <RingtonePreference android:title="Arrived at source" android:showSilent="true" android:showDefault="true" android:ringtoneType="notification" android:key="@string/foundSrcPrefKey" android:selectable="true" android:enabled="true"/>
        <RingtonePreference android:selectable="true" android:title="Arrived at destination" android:enabled="true" android:showSilent="true" android:showDefault="true" android:ringtoneType="notification" android:key="@string/foundDestPrefKey"/>
        <RingtonePreference android:showDefault="true" android:showSilent="true" android:ringtoneType="notification" android:selectable="true" android:title="Station under attack" android:enabled="true" android:key="@string/underAttackPrefKey"/>
        <RingtonePreference android:key="@string/baseDestroyedPrefKey" android:showSilent="true" android:showDefault="true" android:ringtoneType="notification" android:title="Station destroyed" android:enabled="true" android:selectable="true"/>
        <RingtonePreference android:key="@string/productionPrefKey" android:title="New missile produced" android:showSilent="true" android:ringtoneType="notification" android:showDefault="true" android:selectable="true" android:enabled="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Help" android:key="pref_key_help">
        <Preference android:summary="Learn to use Artemis Messenger." android:key="@string/helpTopicsKey" android:title="Show help topics" android:selectable="true" android:enabled="true"/>
        
        
        <CheckBoxPreference android:key="@string/showHintTextKey" android:enabled="true" android:selectable="true" android:title="@string/showHintTextTitle" android:defaultValue="true"/>
        
        
    </PreferenceCategory><PreferenceCategory android:key="pref_key_settings" android:title="@string/settingsPrefCategory">
        <Preference android:title="Restore default settings" android:selectable="true" android:enabled="true" android:key="@string/restoreDefaultButton"/>
    </PreferenceCategory>
    
    

</PreferenceScreen>
