<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/basicsLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/basicsTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/basicsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/basicsScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/basicsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/basicsPar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basicsParagraph1" />

            <TextView
                android:id="@+id/basicsPar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/basicsParagraph2" />

            <TextView
                android:id="@+id/basicsHeader3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/basicsConnectHeader"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/basicsPar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/basicsParagraph3" />

            <TextView
                android:id="@+id/basicsPar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/basicsParagraph4" />

            <TextView
                android:id="@+id/basicsHeader5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/basicsLeavingHeader"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/basicsPar5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/basicsParagraph5" />

            <TextView
                android:id="@+id/basicsPar6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/basicsParagraph6" />

        <Button android:id="@+id/basicsBack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backButton" /></LinearLayout>
    </ScrollView>

    

</LinearLayout>
