<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/connectLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/connectHeaderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/connectHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ListView
        android:id="@+id/connectList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <LinearLayout
        android:id="@+id/serverHeaderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/serverHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availableServers"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ListView
        android:id="@+id/serverList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <LinearLayout
        android:id="@+id/recentHeaderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/recentHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recentHosts"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ListView
        android:id="@+id/recentList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
